--- a/weather.css
+++ b/weather.css
@@ -1,1 +1,96 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: "poppins", sans-serif;
+}
+body{
+    background-color: #222;
+}
+.container{
+    width: fit-content;
+    max-width: 400px;
+    background: linear-gradient(135deg, #00feba, #5b548a);
+    margin: 100px auto 0px;
+    padding: 40px 30px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+}
+.search{
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+.search input{
+    border: 0;
+    padding: 10px 20px;
+    border-radius: 30px;
+    color: #555;
+    height: 30px;
+    margin-right: 18px;
+    font-size: 15px;
+    background: #ebfffc;
 
+}
+.search button{
+    border: 0;
+    height: 30px;
+    width: 30px;
+    border-radius: 50px;
+    background: #ebfffc;
+    align-items: center;
+    cursor: pointer;
+}
+.search button img{
+    width: 16px;
+}
+.icon{
+    width: 150px;
+    margin: 30px 0px 20px;
+}
+.weather h1{
+    font-size: 50px;
+    font-weight: 400;
+}
+.weather h2{
+    font-size: 25px;
+    font-weight: 300;
+    margin-top: 2px;
+}
+.details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    padding: 0 10px;
+    gap: 40px;
+
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.col img{
+    width: 30px;
+    margin-right: 10px;
+}
+.col p{
+    font-size: small;
+}
+
+.humidity, .wind{
+    font-size: 20px;
+}
+#error{
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 5px;
+    text-align: center;
+    display: none;
+    color: #555;
+}
+.weather{
+    display: none;
+}
